reduced webpage width to accomodate scroll bar to prevent horizontal scroll bar from appearing in website

--- a/react-app/src/pages/Home.css
+++ b/react-app/src/pages/Home.css
@@ -1,9 +1,10 @@
 .webpage {
-  width: 100vw;
+  width: calc(100vw - 15px);
+  box-sizing: border-box;
 }
 
 .content-body {
-  width: 100vw;
+  width: 100%;
   display: flex;
 }
 .section {
